feat: combine meteo & AE33

--- a/exp_route.ipynb
+++ b/exp_route.ipynb
@@ -16,6 +16,417 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>output_mark</th>\n",
+       "      <th>yymmddhhmmss</th>\n",
+       "      <th>0W1Bj</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>SN</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>EW</th>\n",
+       "      <th>speed_GPS</th>\n",
+       "      <th>orient_GPS</th>\n",
+       "      <th>GPS_situa</th>\n",
+       "      <th>...</th>\n",
+       "      <th>speed_true_1min</th>\n",
+       "      <th>orient_true_1min</th>\n",
+       "      <th>speed_true_10min</th>\n",
+       "      <th>orient_true_10min</th>\n",
+       "      <th>press</th>\n",
+       "      <th>press_1min</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>temp_1min</th>\n",
+       "      <th>rh</th>\n",
+       "      <th>rh_1min</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>$XZC611</td>\n",
+       "      <td>220410000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3619.8543</td>\n",
+       "      <td>N</td>\n",
+       "      <td>12044.0388</td>\n",
+       "      <td>E</td>\n",
+       "      <td>000.1</td>\n",
+       "      <td>265.7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>07.5</td>\n",
+       "      <td>176</td>\n",
+       "      <td>05.4</td>\n",
+       "      <td>210</td>\n",
+       "      <td>1008.6</td>\n",
+       "      <td>1008.6</td>\n",
+       "      <td>17.4</td>\n",
+       "      <td>+17.3</td>\n",
+       "      <td>54</td>\n",
+       "      <td>055</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>$XZC611</td>\n",
+       "      <td>220410000100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3619.8543</td>\n",
+       "      <td>N</td>\n",
+       "      <td>12044.0386</td>\n",
+       "      <td>E</td>\n",
+       "      <td>000.2</td>\n",
+       "      <td>243.4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>09.6</td>\n",
+       "      <td>170</td>\n",
+       "      <td>05.4</td>\n",
+       "      <td>210</td>\n",
+       "      <td>1008.6</td>\n",
+       "      <td>1008.6</td>\n",
+       "      <td>17.9</td>\n",
+       "      <td>+17.6</td>\n",
+       "      <td>52</td>\n",
+       "      <td>053</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>$XZC611</td>\n",
+       "      <td>220410000200</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3619.8545</td>\n",
+       "      <td>N</td>\n",
+       "      <td>12044.0387</td>\n",
+       "      <td>E</td>\n",
+       "      <td>000.2</td>\n",
+       "      <td>245.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>08.4</td>\n",
+       "      <td>170</td>\n",
+       "      <td>05.2</td>\n",
+       "      <td>210</td>\n",
+       "      <td>1008.5</td>\n",
+       "      <td>1008.6</td>\n",
+       "      <td>18.1</td>\n",
+       "      <td>+18.0</td>\n",
+       "      <td>52</td>\n",
+       "      <td>052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>$XZC611</td>\n",
+       "      <td>220410000300</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3619.8546</td>\n",
+       "      <td>N</td>\n",
+       "      <td>12044.0390</td>\n",
+       "      <td>E</td>\n",
+       "      <td>000.1</td>\n",
+       "      <td>245.7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>09.5</td>\n",
+       "      <td>175</td>\n",
+       "      <td>05.3</td>\n",
+       "      <td>209</td>\n",
+       "      <td>1008.6</td>\n",
+       "      <td>1008.6</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>+18.1</td>\n",
+       "      <td>52</td>\n",
+       "      <td>052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>$XZC611</td>\n",
+       "      <td>220410000400</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3619.8545</td>\n",
+       "      <td>N</td>\n",
+       "      <td>12044.0389</td>\n",
+       "      <td>E</td>\n",
+       "      <td>000.1</td>\n",
+       "      <td>037.6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.7</td>\n",
+       "      <td>173</td>\n",
+       "      <td>06.0</td>\n",
+       "      <td>201</td>\n",
+       "      <td>1008.5</td>\n",
+       "      <td>1008.6</td>\n",
+       "      <td>17.9</td>\n",
+       "      <td>+18.0</td>\n",
+       "      <td>52</td>\n",
+       "      <td>052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23931</th>\n",
+       "      <td>$XZC611</td>\n",
+       "      <td>220426151300</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3619.8419</td>\n",
+       "      <td>N</td>\n",
+       "      <td>12044.0378</td>\n",
+       "      <td>E</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>242.7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>237</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>229</td>\n",
+       "      <td>1005.1</td>\n",
+       "      <td>1005.0</td>\n",
+       "      <td>15.3</td>\n",
+       "      <td>15.2</td>\n",
+       "      <td>89</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23932</th>\n",
+       "      <td>$XZC611</td>\n",
+       "      <td>220426151400</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3619.8419</td>\n",
+       "      <td>N</td>\n",
+       "      <td>12044.0379</td>\n",
+       "      <td>E</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>243</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>230</td>\n",
+       "      <td>1005.2</td>\n",
+       "      <td>1005.1</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>15.1</td>\n",
+       "      <td>89</td>\n",
+       "      <td>89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23933</th>\n",
+       "      <td>$XZC611</td>\n",
+       "      <td>220426151500</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3619.8418</td>\n",
+       "      <td>N</td>\n",
+       "      <td>12044.0378</td>\n",
+       "      <td>E</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>350.6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>241</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>231</td>\n",
+       "      <td>1005.2</td>\n",
+       "      <td>1005.2</td>\n",
+       "      <td>14.8</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>90</td>\n",
+       "      <td>89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23934</th>\n",
+       "      <td>$XZC611</td>\n",
+       "      <td>220426151600</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3619.8418</td>\n",
+       "      <td>N</td>\n",
+       "      <td>12044.0379</td>\n",
+       "      <td>E</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>289.8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>240</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>233</td>\n",
+       "      <td>1005.2</td>\n",
+       "      <td>1005.2</td>\n",
+       "      <td>15.3</td>\n",
+       "      <td>15.1</td>\n",
+       "      <td>91</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23935</th>\n",
+       "      <td>$XZC611</td>\n",
+       "      <td>220426151700</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3619.8418</td>\n",
+       "      <td>N</td>\n",
+       "      <td>12044.0379</td>\n",
+       "      <td>E</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>52.1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>249</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>235</td>\n",
+       "      <td>1005.2</td>\n",
+       "      <td>1005.2</td>\n",
+       "      <td>15.8</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>91</td>\n",
+       "      <td>91</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>23936 rows × 30 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      output_mark  yymmddhhmmss  0W1Bj        lat SN         lon EW speed_GPS  \\\n",
+       "0         $XZC611  220410000000      1  3619.8543  N  12044.0388  E     000.1   \n",
+       "1         $XZC611  220410000100      1  3619.8543  N  12044.0386  E     000.2   \n",
+       "2         $XZC611  220410000200      1  3619.8545  N  12044.0387  E     000.2   \n",
+       "3         $XZC611  220410000300      1  3619.8546  N  12044.0390  E     000.1   \n",
+       "4         $XZC611  220410000400      1  3619.8545  N  12044.0389  E     000.1   \n",
+       "...           ...           ...    ...        ... ..         ... ..       ...   \n",
+       "23931     $XZC611  220426151300      1  3619.8419  N  12044.0378  E       0.1   \n",
+       "23932     $XZC611  220426151400      1  3619.8419  N  12044.0379  E       0.0   \n",
+       "23933     $XZC611  220426151500      1  3619.8418  N  12044.0378  E       0.1   \n",
+       "23934     $XZC611  220426151600      1  3619.8418  N  12044.0379  E       0.1   \n",
+       "23935     $XZC611  220426151700      1  3619.8418  N  12044.0379  E       0.1   \n",
+       "\n",
+       "      orient_GPS  GPS_situa  ... speed_true_1min  orient_true_1min  \\\n",
+       "0          265.7          2  ...            07.5               176   \n",
+       "1          243.4          2  ...            09.6               170   \n",
+       "2          245.0          2  ...            08.4               170   \n",
+       "3          245.7          2  ...            09.5               175   \n",
+       "4          037.6          2  ...            10.7               173   \n",
+       "...          ...        ...  ...             ...               ...   \n",
+       "23931      242.7          2  ...             2.5               237   \n",
+       "23932       73.0          2  ...             2.0               243   \n",
+       "23933      350.6          2  ...             2.1               241   \n",
+       "23934      289.8          2  ...             1.6               240   \n",
+       "23935       52.1          2  ...             0.8               249   \n",
+       "\n",
+       "       speed_true_10min  orient_true_10min   press  press_1min  temp  \\\n",
+       "0                  05.4                210  1008.6      1008.6  17.4   \n",
+       "1                  05.4                210  1008.6      1008.6  17.9   \n",
+       "2                  05.2                210  1008.5      1008.6  18.1   \n",
+       "3                  05.3                209  1008.6      1008.6  18.0   \n",
+       "4                  06.0                201  1008.5      1008.6  17.9   \n",
+       "...                 ...                ...     ...         ...   ...   \n",
+       "23931               2.6                229  1005.1      1005.0  15.3   \n",
+       "23932               2.6                230  1005.2      1005.1  15.0   \n",
+       "23933               2.5                231  1005.2      1005.2  14.8   \n",
+       "23934               2.5                233  1005.2      1005.2  15.3   \n",
+       "23935               2.4                235  1005.2      1005.2  15.8   \n",
+       "\n",
+       "       temp_1min  rh rh_1min  \n",
+       "0          +17.3  54     055  \n",
+       "1          +17.6  52     053  \n",
+       "2          +18.0  52     052  \n",
+       "3          +18.1  52     052  \n",
+       "4          +18.0  52     052  \n",
+       "...          ...  ..     ...  \n",
+       "23931       15.2  89      90  \n",
+       "23932       15.1  89      89  \n",
+       "23933       15.0  90      89  \n",
+       "23934       15.1  91      90  \n",
+       "23935       15.6  91      91  \n",
+       "\n",
+       "[23936 rows x 30 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "import datetime, os, warnings;  warnings.filterwarnings('ignore')\n",
+    "\n",
+    "meteokeys = ['output_mark','yymmddhhmmss','0W1Bj','lat','SN','lon','EW',\n",
+    "                'speed_GPS','orient_GPS','GPS_situa',\n",
+    "                'speed_zhenFeng','speed_source','speed_valid',\n",
+    "                'orient_zhenFeng','orient_source','orient_valid',\n",
+    "               'speed_relative','orient_relative','speed_true','orient_true',\n",
+    "               'speed_true_1min','orient_true_1min','speed_true_10min','orient_true_10min',\n",
+    "               'press','press_1min','temp','temp_1min','rh','rh_1min']\n",
+    "def read_meteo():\n",
+    "    file_dir = './meteoinfo/'\n",
+    "    files = os.listdir(file_dir)\n",
+    "    df1 = pd.read_table(os.path.join(file_dir, files[0]),sep=',',header=None,usecols=range(0,30))\n",
+    "    \n",
+    "    for file in files[1:]:#再拼接其余的\n",
+    "        df2 = pd.read_table(os.path.join(file_dir, file),sep=',',header=None,usecols=range(0,30))\n",
+    "        df1 = pd.concat((df1, df2), axis=0, join='inner')\n",
+    "    df=df1\n",
+    "    del df2,df1\n",
+    "    df.columns=meteokeys    \n",
+    "    # 去除经纬度异常值\n",
+    "    df = df[df['lon']!='XXXXX.XXXX']\n",
+    "    df = df[df['lat']!='XXXX.XXXX']\n",
+    "    # 重新排序index，并删除原index\n",
+    "    df = df.reset_index(drop=True)\n",
+    "    return df\n",
+    "df = read_meteo()\n",
+    "display(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
@@ -28,7 +439,7 @@
     "import pandas as pd \n",
     "def read_routell(date):\n",
     "    import warnings;warnings.filterwarnings('ignore')\n",
-    "    ll_dir = 'E:/programming/code_2022_5/route/经纬度走行气象数据/'\n",
+    "    ll_dir = './meteoinfo/'\n",
     "    df = pd.read_table(ll_dir+date+'.TXT',sep=',',header=None,usecols=range(0,30))\n",
     "    pd.set_option('display.max_columns', None)\n",
     "    df.columns=['output_mark','yymmddhhmmss','0W1Bj','lat','SN','lon','EW',\n",
